# FraudSentinel

./: .gitignore  LICENSE  Makefile  NEXT_STEPS.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml  render.yaml
backend/app/: config.py  main.py
backend/app/api/: routes_drift.py  routes_health.py  routes_metrics.py  routes_predict.py
backend/app/fixtures/: demo_transactions.json  drift_report.json  eval_metrics.json  model_comparison.json  rationales.json
backend/app/schemas/: metrics.py  prediction.py  transaction.py
backend/app/services/: drift_service.py  metrics_service.py  prediction_service.py
backend/tests/: test_api_metrics.py  test_api_predict.py  test_schemas.py
docs/: architecture.md  deployment.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ArchitectureDiagram.tsx  ConfidenceRouterViz.tsx  DriftChart.tsx  FairnessChart.tsx  Hero.tsx  ModelComparisonTable.tsx  PerformanceCharts.tsx  PredictionCard.tsx  RationaleDisplay.tsx  ShapWaterfall.tsx  TransactionPicker.tsx
frontend/src/components/ui/: Badge.tsx  Card.tsx  Section.tsx  Skeleton.tsx
frontend/src/hooks/: useApi.ts
frontend/src/lib/: api.ts  tone.ts  types.ts
ml/: README.md
ml/evaluation/: drift.py  fairness.py  llm_judge.py  metrics.py
ml/synthetic_sft/: generate_rationales.py
ml/training/: compare_models.py  train_catboost.py  train_lightgbm.py  train_lora.py  train_xgboost.py
